# django-calculator

./: .gitignore  4.0  LICENSE  README.md  manage.py  package.json  setup.cfg
calculator_app/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
calculator_app/static/calculator_app/css/: styles.css
calculator_app/static/calculator_app/js/: calculator.js
calculator_app/templates/calculator_app/: calculator.html
django-calculator/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
