[metadata]
name = django-calculator
version = 0.1
description = A modern web calculator built with Django
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/django-calculator
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django>=4.0,<5.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    */migrations/*,
    */static/*,
    */templates/*

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
known_first_party = calculator_app
line_length = 88
skip = migrations

[coverage:run]
source = calculator_app
omit =
    */migrations/*
    */tests/*
    */__init__.py